--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 @import 'tailwindcss';
 
+
 @theme {
+    /* Fonts */
     --font-headings: 'Oswald', sans-serif;
+    --font-code: 'SUSE Mono', sans-serif;
     
     /* Colors */
     --color-txt: #85ece2;
@@ -13,8 +16,14 @@
     --color-opacity: rgba(255, 255, 255, 0.1);
     --color-txt-2: #A8D1CD;
 
-/* Gradient */
+    /* Gradient */
  
+
+    /* Spacings */
+    --spacing-sections: 1rem;
+
+    /* Sizes */
+    --size-hero: 90vh;
 
 
     --border-1: 0.5px solid rgba(255, 255, 255, 0.1);
@@ -34,12 +43,14 @@
 
 
 body {
-    background: linear-gradient(180deg, var(--color-bg-dark-plus) 0%, var(--color-bg-dark-plus) 60%, var(--color-bg-dark-extra) 80%);
+    /* background: linear-gradient(180deg, var(--color-bg-dark-plus) 0%, var(--color-bg-dark-plus) 60%, var(--color-bg-dark-extra) 80%); */
+     background: url("hero_image_3.jpg");
+    background-position: center;
+    background-size: cover;
+    background-blend-mode:darken;
     height: 100vh;
     font-family: var(--font-headings);
 }
-
-
 
 
 
