--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&family=Manrope:wght@200..800&family=Oswald:wght@200..700&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 @import 'tailwindcss';
 
 
 @theme {
     /* Fonts */
     --font-headings: 'Oswald', sans-serif;
+    --font-headings-2: "Antonio", sans-serif;
     --font-code: 'SUSE Mono', sans-serif;
+    --font-p-1: 'Manrope', sans-serif;
     
     /* Colors */
     --color-txt: #85ece2;
@@ -44,14 +46,18 @@
 
 body {
     /* background: linear-gradient(180deg, var(--color-bg-dark-plus) 0%, var(--color-bg-dark-plus) 60%, var(--color-bg-dark-extra) 80%); */
-     background: url("hero_image_3.jpg");
+    background: url("hero_image_3.jpg");
     background-position: center;
     background-size: cover;
     background-blend-mode:darken;
     height: 100vh;
-    font-family: var(--font-headings);
+    font-family: var(--font-headings-2);
 }
 
+
+.icon-btn {
+    @apply absolute w-full h-full top-0 left-0 via-20% bg-gradient-to-b from-txt via-bg-dark-plus to-txt z-10 opacity-50;
+}
 
 
 
