--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,10 @@ body {
     @apply absolute w-full h-full top-0 left-0 via-20% bg-gradient-to-b from-txt via-bg-dark-plus to-txt z-10 opacity-50;
 }
 
+#overlay-bg {
+    filter: saturate(0.3);
+    opacity: 0.2;
+}
 
 
 
