--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,20 @@ body {
   opacity: 0.2;
 }
 
+#bit-image::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 210px;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    var(--color-theme-gray-900) 100%
+  );
+}
+
 @keyframes navbar {
   0%,
   100% {
